--- a/sass/style.css
+++ b/sass/style.css
@@ -109,7 +109,7 @@ a {
   }
 }
 
-#body, .body2 {
+#body, #body2 {
   background-color: #9DE9E9;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -120,22 +120,22 @@ a {
           flex-direction: column;
 }
 
-#body .navbar, .body2 .navbar, #body .text-1, .body2 .text-1 {
+#body .navbar, #body2 .navbar, #body .text-1, #body2 .text-1 {
   font-family: 'Indie Flower', cursive;
   color: #ffff;
   background-color: #4DBACE;
 }
 
-#body .navbar .navbar-toggler-icon, .body2 .navbar .navbar-toggler-icon, #body .text-1 .navbar-toggler-icon, .body2 .text-1 .navbar-toggler-icon {
+#body .navbar .navbar-toggler-icon, #body2 .navbar .navbar-toggler-icon, #body .text-1 .navbar-toggler-icon, #body2 .text-1 .navbar-toggler-icon {
   -webkit-filter: invert(1);
           filter: invert(1);
 }
 
-#body .navbar .logoNav, .body2 .navbar .logoNav, #body .text-1 .logoNav, .body2 .text-1 .logoNav {
+#body .navbar .logoNav, #body2 .navbar .logoNav, #body .text-1 .logoNav, #body2 .text-1 .logoNav {
   border-radius: 30px;
 }
 
-#body .text-1, .body2 .text-1 {
+#body .text-1, #body2 .text-1 {
   margin-top: 20px;
   text-align: center;
   padding: 10px;
@@ -143,67 +143,73 @@ a {
           animation: slide-in-blurred-top 1.5s cubic-bezier(0.23, 1, 0.32, 1) 1.5s both;
 }
 
-#body .carrousel, .body2 .carrousel {
+#body .carrousel, #body2 .carrousel {
   margin-top: 20px;
   -webkit-animation: slide-in-bck-center 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           animation: slide-in-bck-center 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-#body .materias, .body2 .materias {
+#body .materias, #body2 .materias {
   color: #ffff;
   font-family: 'Indie Flower', cursive;
   background-color: #9ADCFF;
   margin-top: 20px;
   text-align: center;
   padding: 10px;
+  border-radius: 45px;
   -webkit-animation: roll-in-blurred-right 0.7s cubic-bezier(0.23, 1, 0.32, 1) both;
           animation: roll-in-blurred-right 0.7s cubic-bezier(0.23, 1, 0.32, 1) both;
 }
 
-#body .materias .materiasLi, .body2 .materias .materiasLi {
+#body .materias .materiasLi, #body2 .materias .materiasLi {
   list-style: none;
 }
 
-#body .venta, .body2 .venta {
+#body .venta, #body2 .venta {
   background-color: #4DBACE;
   padding: 20px;
   color: #ffff;
   border-radius: 30px;
   margin: 10px;
-  font-family: 'Indie Flower', cursive;
 }
 
-#body .venta .h2Venta, .body2 .venta .h2Venta {
+#body .venta .h2Venta, #body2 .venta .h2Venta {
   text-align: center;
   -webkit-text-decoration-color: none;
           text-decoration-color: none;
-          font-family: 'Indie Flower', cursive;
+  font-family: 'Indie Flower', cursive;
 }
 
-#body .venta a, .body2 .venta a {
+#body .venta a, #body2 .venta a {
   text-decoration: none;
   color: #ffff;
 }
 
-#body .venta .listaVenta, .body2 .venta .listaVenta {
+#body .venta .listaVenta, #body2 .venta .listaVenta {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   text-align: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
   list-style: none;
-  gap: 70px;
+  gap: 20px;
+  margin-left: -20px;
 }
 
-#body .venta .listaVenta .l1, .body2 .venta .listaVenta .l1 {
+#body .venta .listaVenta .l1, #body2 .venta .listaVenta .l1 {
   -webkit-animation: pulsate-fwd 1.5s ease-in-out infinite both;
           animation: pulsate-fwd 1.5s ease-in-out infinite both;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -212,7 +218,7 @@ a {
           justify-content: center;
 }
 
-#body .footer, .body2 .footer {
+#body .footer, #body2 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -228,7 +234,7 @@ a {
   color: #ffff;
 }
 
-#body .redes, .body2 .redes {
+#body .redes, #body2 .redes {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -241,12 +247,12 @@ a {
   color: #ffff;
 }
 
-#body .redes a, .body2 .redes a {
+#body .redes a, #body2 .redes a {
   text-decoration: none;
   color: #ffff;
 }
 
-.body2 #videos {
+#body2 #videos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -255,6 +261,14 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 15px;
+}
+
+#body2 #videos .titulo-h2 {
+  color: #ffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-family: "Indie Flower", cursive;
 }
 
 select.swal2-select {
