--- a/sass/style.css
+++ b/sass/style.css
@@ -268,7 +268,15 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-family: "Indie Flower", cursive;
+}
+
+#body2 #videos #listaVideos {
+  background-color: #4DBACE;
+  color: #ffff;
+  text-align: center;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  font-family: 'Indie Flower', cursive;
 }
 
 select.swal2-select {
