--- a/sass/style.css
+++ b/sass/style.css
@@ -109,7 +109,7 @@ a {
   }
 }
 
-#body, #body2 {
+#body, #body2, #body3 {
   background-color: #9DE9E9;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -120,22 +120,22 @@ a {
           flex-direction: column;
 }
 
-#body .navbar, #body2 .navbar, #body .text-1, #body2 .text-1 {
+#body .navbar, #body2 .navbar, #body3 .navbar, #body .text-1, #body2 .text-1, #body3 .text-1 {
   font-family: 'Indie Flower', cursive;
   color: #ffff;
   background-color: #4DBACE;
 }
 
-#body .navbar .navbar-toggler-icon, #body2 .navbar .navbar-toggler-icon, #body .text-1 .navbar-toggler-icon, #body2 .text-1 .navbar-toggler-icon {
+#body .navbar .navbar-toggler-icon, #body2 .navbar .navbar-toggler-icon, #body3 .navbar .navbar-toggler-icon, #body .text-1 .navbar-toggler-icon, #body2 .text-1 .navbar-toggler-icon, #body3 .text-1 .navbar-toggler-icon {
   -webkit-filter: invert(1);
           filter: invert(1);
 }
 
-#body .navbar .logoNav, #body2 .navbar .logoNav, #body .text-1 .logoNav, #body2 .text-1 .logoNav {
+#body .navbar .logoNav, #body2 .navbar .logoNav, #body3 .navbar .logoNav, #body .text-1 .logoNav, #body2 .text-1 .logoNav, #body3 .text-1 .logoNav {
   border-radius: 30px;
 }
 
-#body .text-1, #body2 .text-1 {
+#body .text-1, #body2 .text-1, #body3 .text-1 {
   margin-top: 20px;
   text-align: center;
   padding: 10px;
@@ -143,13 +143,13 @@ a {
           animation: slide-in-blurred-top 1.5s cubic-bezier(0.23, 1, 0.32, 1) 1.5s both;
 }
 
-#body .carrousel, #body2 .carrousel {
+#body .carrousel, #body2 .carrousel, #body3 .carrousel {
   margin-top: 20px;
   -webkit-animation: slide-in-bck-center 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
           animation: slide-in-bck-center 2s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-#body .materias, #body2 .materias {
+#body .materias, #body2 .materias, #body3 .materias {
   color: #ffff;
   font-family: 'Indie Flower', cursive;
   background-color: #9ADCFF;
@@ -161,11 +161,11 @@ a {
           animation: roll-in-blurred-right 0.7s cubic-bezier(0.23, 1, 0.32, 1) both;
 }
 
-#body .materias .materiasLi, #body2 .materias .materiasLi {
+#body .materias .materiasLi, #body2 .materias .materiasLi, #body3 .materias .materiasLi {
   list-style: none;
 }
 
-#body .venta, #body2 .venta {
+#body .venta, #body2 .venta, #body3 .venta {
   background-color: #4DBACE;
   padding: 20px;
   color: #ffff;
@@ -173,33 +173,29 @@ a {
   margin: 10px;
 }
 
-#body .venta .h2Venta, #body2 .venta .h2Venta {
+#body .venta .h2Venta, #body2 .venta .h2Venta, #body3 .venta .h2Venta {
   text-align: center;
   -webkit-text-decoration-color: none;
           text-decoration-color: none;
   font-family: 'Indie Flower', cursive;
 }
 
-#body .venta a, #body2 .venta a {
+#body .venta a, #body2 .venta a, #body3 .venta a {
   text-decoration: none;
   color: #ffff;
 }
 
-#body .venta .listaVenta, #body2 .venta .listaVenta {
+#body .venta .listaVenta, #body2 .venta .listaVenta, #body3 .venta .listaVenta {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   text-align: center;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
   list-style: none;
   gap: 20px;
   margin-left: -20px;
 }
 
-#body .venta .listaVenta .l1, #body2 .venta .listaVenta .l1 {
+#body .venta .listaVenta .l1, #body2 .venta .listaVenta .l1, #body3 .venta .listaVenta .l1 {
   -webkit-animation: pulsate-fwd 1.5s ease-in-out infinite both;
           animation: pulsate-fwd 1.5s ease-in-out infinite both;
   display: -webkit-box;
@@ -218,7 +214,11 @@ a {
           justify-content: center;
 }
 
-#body .footer, #body2 .footer {
+#body .venta .ventaPc, #body2 .venta .ventaPc, #body3 .venta .ventaPc {
+  display: none;
+}
+
+#body .footer, #body2 .footer, #body3 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -234,7 +234,7 @@ a {
   color: #ffff;
 }
 
-#body .redes, #body2 .redes {
+#body .redes, #body2 .redes, #body3 .redes {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -247,12 +247,12 @@ a {
   color: #ffff;
 }
 
-#body .redes a, #body2 .redes a {
+#body .redes a, #body2 .redes a, #body3 .redes a {
   text-decoration: none;
   color: #ffff;
 }
 
-#body2 #videos {
+#body2 #videos, #body3 #videos {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -263,20 +263,95 @@ a {
   padding: 15px;
 }
 
-#body2 #videos .titulo-h2 {
+#body2 #videos .titulo-h2, #body3 #videos .titulo-h2 {
   color: #ffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-#body2 #videos #listaVideos {
+#body2 #videos #listaVideos, #body3 #videos #listaVideos {
   background-color: #4DBACE;
   color: #ffff;
   text-align: center;
   margin-bottom: 10px;
   border-radius: 15px;
   font-family: 'Indie Flower', cursive;
+}
+
+#body3 #contacto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #ffff;
+  font-family: 'Indie Flower', cursive;
+  margin: 10px;
+  border: 2px solid #9ADCFF;
+  border-radius: 15px;
+  padding: 1.25rem;
+}
+
+#body3 #contacto .redesContacto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  padding: 10px;
+  margin-bottom: 2.5px;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  gap: 10px;
+}
+
+#body3 #formularios {
+  padding: 5px;
+  font-size: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 7px;
+  background-color: #4DBACE;
+  border-radius: 15px;
+  margin-bottom: 15px;
+  font-family: 'Indie Flower', cursive;
+  font-size: 23px;
+}
+
+#body3 #formularios #nombre {
+  margin-bottom: 10px;
+  border-top-style: none;
+  border-left-style: none;
+  border-right-style: none;
+  border-bottom: 1px solid #ffffff;
+}
+
+#body3 #formularios #nombre button, #body3 #formularios #nombre input, #body3 #formularios #nombre optgroup, #body3 #formularios #nombre select, #body3 #formularios #nombre textarea {
+  color: transparent;
+}
+
+#body3 #formularios #btnEnviar {
+  background: #fff;
+  color: #222;
+  text-align: center;
+  padding: 0.5em;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: #fff;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  border-radius: 0.25em;
+  font-family: 'Indie Flower', cursive;
+  font-size: 16px;
 }
 
 select.swal2-select {
